--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/services/apiService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
